# kournable

./: CMakeLists.txt  README  README.md  kournable.kdev4
src/: CMakeLists.txt  kournable.cpp  kournable.h  kournable.ui  kournableui.rc  main.cpp  mainwindow.cpp  mainwindow.h
